# hess

./: .gitignore  README.md  hess.cabal
src/: BitBoard.hs  Game.hs  GameTemplates.hs  MagicTest.hs  Main.hs  PreBitBoard.hs
src/Game/: BitBoard.hs  BitBoardTemplates.hs  BoardMask.hs  BoardMaskTemplates.hs  Magic.hs  MagicTemplates.hs
