name:                       Hess
version:                    0.0.1
cabal-version:              >= 1.16
license:                    MIT
author:                     Eivind Fonn
synopsis:                   Experimental chess engine
build-type:                 Simple

executable hess
    build-depends:          base
    main-is:                Main.hs
    hs-source-dirs:         src
    default-language:       Haskell2010
